[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Shadow.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shadow.png" type="Texture" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 1.35, 0.01 )

[node name="Shadow" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
script = ExtResource( 1 )

[node name="Transform" type="Spatial" parent="."]

[node name="Sprite" type="Sprite3D" parent="Transform"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
offset = Vector2( 0, 135 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 270 )

[node name="ZPosExtreme" type="Spatial" parent="Transform/Sprite"]
editor/display_folded = true

[node name="MeshInstance" type="MeshInstance" parent="Transform/Sprite/ZPosExtreme"]
mesh = SubResource( 1 )
material/0 = null

[node name="XPosExtreme" type="Spatial" parent="Transform/Sprite"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Transform/Sprite/XPosExtreme"]
mesh = SubResource( 1 )
material/0 = null

[node name="ZNegExtreme" type="Spatial" parent="Transform/Sprite"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Transform/Sprite/ZNegExtreme"]
mesh = SubResource( 1 )
material/0 = null

[node name="XNegExtreme" type="Spatial" parent="Transform/Sprite"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Transform/Sprite/XNegExtreme"]
mesh = SubResource( 1 )
material/0 = null

[node name="Area" type="Area" parent="Transform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.002, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Transform/Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 1.35 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Transform/Area" to="." method="_on_Area_body_entered"]
